fix: blog content styling (#82)
* fix(blog post/styles): add max-width to all elements in blog post

This prevents images from overflowing the content div.

* fix(blog content/styles): add proper styles for code-embed

--- a/src/components/BlogPage/SinglePost/SinglePost.component.module.scss
+++ b/src/components/BlogPage/SinglePost/SinglePost.component.module.scss
@@ -29,6 +29,10 @@
   }
 }
 
+.Content * {
+  max-width: 100%;
+}
+
 .Header {
   display: flex;
   flex-flow: column;
